# tfidf-servise-api

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
infra/: docker-compose.local.yml
src/app/: Dockerfile  main.py
src/app/api/: __init__.py  shemas.py  validators.py
src/app/api/v1/: __init__.py  routers.py
src/app/api/v1/endpoints/: file_handler.py
src/app/api/v2/: __init__.py  routers.py
src/app/api/v2/endpoints/: __init__.py  file_handler.py
src/app/static/templates/: upload_form.html
src/app/static/templates/css/: styles.css
src/app/templates/: upload_form.html
src/core/rabbit/: __init__.py  settings.py
src/core/redis/: __init__.py  redis_tools.py  settings.py
src/core/services/: __init__.py  procesing_file.py
src/worker/: consumer.py  main.py  publisher.py
