[tool.poetry]
name = "tfidf-servise-api"
version = "0.1.0"
description = ""
authors = ["NECROshizo <necroshizo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-multipart = "^0.0.9"
jinja2 = "^3.1.3"
pydantic-settings = "^2.2.1"
redis = "^5.0.4"
pydantic = "^2.7.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "venv",
]
target-version = "py311"
line-length = 120
lint.ignore = ["D"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
